# Computer-Game-AI

./: .gitignore  Bounds.cpp  Bounds.h  CMakeLists.txt  Collider.cpp  Collider.h  Dev Notes.md  Enemy.cpp  Enemy.h  Level.cpp  Level.h  audio-manager.cpp  audio-manager.hpp  damage-pickup.cpp  damage-pickup.h  debug-collision-draw.cpp  debug-collision-draw.h  game-manager.cpp  game-manager.hpp  health-pickup.cpp  health-pickup.h  npc.cpp  npc.hpp  openai-helper.cpp  openai-helper.hpp  pc.cpp  pc.hpp  pick-up.cpp  pick-up.h  player-ui.cpp  player-ui.h  raylib-openai-npcs-extended.cpp  shield-pickup.cpp  shield-pickup.h  speed-pickup.cpp  speed-pickup.h  sprite.hpp  text-box.cpp  text-box.hpp
resources/: 1-1.json  1-1.tmx  1-2.json  1-2.tmx  1-3.json  1-3.tmx  ashlands2.json  ashlands2.tmx
resources/time_fantasy/tf_ashlands/: tf_ashlands.lnk
